Animation fix for firefox
animation restructured to prevent ff bug.

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   <body>
     <div class="wrap">
       <div class="clock">
-        <div class="hour-hand" id="hours">
-          <img src="images/hour-hand.png" />
+        <div class="hour-hand" >
+          <img src="images/hour-hand.png" id="js-hours" />
         </div>
-        <div class="min-hand" id="minutes">
-          <img src="images/min-hand.png" />
+        <div class="min-hand" >
+          <img src="images/min-hand.png" id="js-minutes"/>
         </div>
-        <div class="sec-hand" id="seconds">
-          <img src="images/second-hand.png" />
+        <div class="sec-hand">
+          <img src="images/second-hand.png" id="js-seconds"/>
         </div>
 
         <div class="shadow-clock"></div>
