added logic to clock

--- a/app/states/clock.html
+++ b/app/states/clock.html
@@ -1,20 +1,22 @@
 <div class="wrap">
   <div class="clock">
     <div class="hour-hand" >
-      <img src="images/hour-hand.png" id="js-hours" />
+      <img src="images/hour-hand.png" ng-style="clock.hoursHandStyle" id="js-hours" />
     </div>
     <div class="min-hand" >
-      <img src="images/min-hand.png" id="js-minutes"/>
+      <img src="images/min-hand.png" ng-style="clock.minutesHandStyle" id="js-minutes"/>
     </div>
     <div class="sec-hand">
-      <img src="images/second-hand.png" id="js-seconds"/>
+      <img src="images/second-hand.png" ng-style="clock.secondsHandStyle" id="js-seconds"/>
     </div>
 
     <div class="shadow-clock"></div>
 
-    <audio src="assets/clock-ticking.mp3"  autoplay loop class="audio" id="audio"></audio>
-    <span class="icon icon-volume-high"></span>
-    <span class="icon icon-volume-mute" onclick="document.getElementById('audio').muted = false;"></span>
+    <audio src="sounds/clock-ticking.mp3"  autoplay loop class="audio" id="audio" ng-if="clock.startSound"></audio>
+    <span ng-if="clock.startSound"
+      ng-click="clock.toggleStart()"
+    class="icon icon-volume-high"></span>
+    <span ng-if="!clock.startSound" class="icon icon-volume-mute" ng-click="clock.toggleStart()"></span>
 
 </div>
 
